--- a/contact-me.html
+++ b/contact-me.html
@@ -12,7 +12,7 @@
     <p>+23481xxxxxxxx</p>
     <p>mymail@gmail.com</p></address>
     <hr>
-    <form action="mailto:teesmart39@gmail.com" enctype="text/plain">
+    <form action="mailto:teesmart39@gmail.com" method="post" enctype="text/plain">
 <label>Your Name:</label><br>
 <input type="text" name="yourName"><br>
 <label>Your Email:</label><br>
